Fixed spacing in rssb approach

--- a/src/pages/Cases/cases.scss
+++ b/src/pages/Cases/cases.scss
@@ -13,6 +13,9 @@
     font-size: 25px;
     line-height: 37.5px;
     letter-spacing: 0%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .feature-items {
